# FastAPI-Projects

./: README.md
Academic_Scraper/: README.md  pyproject.toml
Academic_Scraper/academic_scraper/: keyword_analysis.py  main.py
Academic_Scraper/academic_scraper/static/: styles.css
Academic_Scraper/academic_scraper/templates/: index.html
Blog/: README.md  blog.json  main.py
Blog/static/: style.css
Blog/templates/: edit_post.html  index.html
Chat/: README.md
Chat/static/js/: script.js
Chat/templates/: index.html
fastapi-projects-2024/: README.md
fastapi-projects-2024/Academic_Scraper/academic_scraper/: scraper.py
fastapi-projects-2024/Academic_Scraper/academic_scraper/templates/: analysis.html  base.html
fastapi-projects-2024/Blog/: pyproject.toml
fastapi-projects-2024/Blog/templates/: create_post.html  post.html
fastapi-projects-2024/Chat/: README.md  main.py  pyproject.toml
fastapi-projects-2024/Chat/static/css/: style.css
fastapi-projects-2024/Faq-Chatbot/: README.md
