[tool.poetry]
name = "academic-scraper"
version = "0.1.0"
description = ""
authors = ["zoelinsg <zoelin.sg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
spacy = "^3.8.4"
pandas = "^2.2.3"
fastapi = "^0.115.6"
pytest = "^8.3.4"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
